# circleci-demo-haskell

./: README.md  circleci-demo-haskell.cabal  stack-8.2.2.yaml
.circleci/: config.yml
test/: Spec.hs
